test/cases/parser/TraitExpectedName.errors
TraitExpectedName.b:5:15: Syntax error (expected trait name)
