test/cases/parser/TraitExpectedName.b
module TraitExpectedName

interface {}

function f<T: +
